--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,6 @@
         "@nestjs/swagger": "^7.2.0",
         "@nestjs/throttler": "^5.1.1",
         "@prisma/client": "^5.22.0",
-        "@types/nodemailer": "^7.0.9",
-        "@types/pdfkit": "^0.17.4",
         "bcrypt": "^5.1.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
@@ -40,7 +38,8 @@
         "pdfkit": "^0.17.2",
         "reflect-metadata": "^0.2.1",
         "rxjs": "^7.8.1",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.3.0",
@@ -51,7 +50,9 @@
         "@types/jest": "^29.5.11",
         "@types/multer": "^2.0.0",
         "@types/node": "^20.10.6",
+        "@types/nodemailer": "^7.0.9",
         "@types/passport-jwt": "^4.0.0",
+        "@types/pdfkit": "^0.17.4",
         "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^6.18.0",
         "@typescript-eslint/parser": "^6.18.0",
