--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,11 +20,18 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
+# Add non-root user for security
+RUN addgroup --system --gid 1001 nodejs && \
+    adduser --system --uid 1001 nestjs
+
 # Copy only what's needed for production
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/prisma ./prisma
+
+# Switch to non-root user
+USER nestjs
 
 EXPOSE 3001
 
