--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -88,7 +88,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:3001}
+        NEXT_PUBLIC_API_URL: http://backend:3001
     container_name: clinicedge_frontend
     restart: unless-stopped
     ports:
