--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,10 +25,10 @@ RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 nestjs
 
 # Copy only what's needed for production
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/prisma ./prisma
+COPY --chown=nestjs:nodejs --from=builder /app/dist ./dist
+COPY --chown=nestjs:nodejs --from=builder /app/node_modules ./node_modules
+COPY --chown=nestjs:nodejs --from=builder /app/package*.json ./
+COPY --chown=nestjs:nodejs --from=builder /app/prisma ./prisma
 
 # Switch to non-root user
 USER nestjs
